--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,10 @@
 
-all: verhoeff
+all: verhoeff vcheck
 	./verhoeff 501 8102439 0112113 2314231 4423123 55123123 3332433 883478 884378347 748384783783738101 >test_data.json
+	./vcheck 561724816
 	
 verhoeff: verhoeff.c
+
+vcheck: vcheck.c
+
 
